--- a/helptux/templates/admin/admin_navigation.html
+++ b/helptux/templates/admin/admin_navigation.html
@@ -14,7 +14,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="{{ url_for('.v_index') }}">Home</a></li>
-                    <li class=""><a href="{{ url_for('.v_user_list') }}">Blog administration</a></li>
+                    <li class=""><a href="{{ url_for('.v_post_list') }}">Blog administration</a></li>
                     <li class=""><a href="{{ url_for('.v_user_list') }}">User administration</a></li>
                     <li class=""><a href="{{ url_for('.v_logout') }}">Logout</a></li>
                 </ul>
