--- a/helptux/templates/admin/admin_base.html
+++ b/helptux/templates/admin/admin_base.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% if title %}
-    <title>{{ title }}</title>
+        <title>{{ title }}</title>
     {% else %}
-    <title>Helptux</title>
+        <title>Helptux</title>
     {% endif %}
     <!-- CSS -->
     <!-- Bootstrap -->
@@ -22,16 +22,23 @@
     {% endblock %}
     <!-- Javascript -->
     <!-- Bootstrap -->
-    <script type="text/javascript" src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
+    <script>window.jQuery || document.write('<script src="{{ url_for('static', filename='bower_components/jquery/dist/jquery.js') }}"><\/script>')</script>
     <script type="application/javascript"
             src="{{ url_for('static', filename='bower_components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
     <!-- Angular -->
     <script type="application/javascript"
             src="{{ url_for('static', filename='bower_components/angular/angular.min.js') }}"></script>
     <script type="application/javascript"
-            src="{{ url_for('static', filename='bower_components/angular-route/angular-route.min.js') }}"></script>
+            src="{{ url_for('static', filename='bower_components/angular-resource/angular-resource.min.js') }}"></script>
     <!-- Helptux -->
-    <script type="application/javascript" src="{{ url_for('static', filename='helptux/helptux.js') }}"></script>
+    <script type="application/javascript"
+            src="{{ url_for('static', filename='helptux/modules/api/api.core.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.tag.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.type.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.cat.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='helptux/scripts/admin.js') }}"></script>
     {% block helptux_js %}
     {% endblock %}
 </head>
@@ -54,18 +61,17 @@
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             {% if get_flashed_messages() %}
-            <!-- Messages -->
-            {% for message in get_flashed_messages() %}
-            <div class="alert alert-info" role="alert">
-                {{ message }}
-            </div>
-            {% endfor %}
+                <!-- Messages -->
+                {% for message in get_flashed_messages() %}
+                    <div class="alert alert-info" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
             {% endif %}
             {% block admin_content %}
             {% endblock %}
         </div>
     </div>
-</div>
 </div>
 </body>
 </html>
