--- a/helptux/templates/admin/admin_base.html
+++ b/helptux/templates/admin/admin_base.html
@@ -38,6 +38,7 @@
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.tag.js') }}"></script>
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.type.js') }}"></script>
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.cat.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/tagger/tagger.js') }}"></script>
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/scripts/admin.js') }}"></script>
     {% block helptux_js %}
     {% endblock %}
