--- a/helptux/templates/admin/post/create.html
+++ b/helptux/templates/admin/post/create.html
@@ -27,14 +27,14 @@
                 <div class="col-md-4">
                     <div class="form-group">
                         <label for="post.tag" class="sr-only">Tags</label>
-                        <input list="post.tags" id="post.tag" ng-model="post.tag" placeholder="Tags"
-                               class="form-control"/>
+                        <input list="post.tags" id="post.tag" ng-model="input_tag" placeholder="Tags"
+                               class="form-control" ng-keydown="$event.which == 32 && tag_to_tags(input_tag)" ng-value="input_tag"/>
                         <datalist id="post.tags">
-                            <option value="{{tag.tag}}" ng-repeat="tag in available_tags"/>
+                            <option ng-value="tag.tag" ng-repeat="tag in available_tags">{{tag.tag}}</option>
                         </datalist>
                         <div>
                             <ul>
-                                <li ng-repeat="tag in post.tags">{{tag.tag}}</li>
+                                <li ng-repeat="tag in post.tags" ng-click="remove_tag(tag)">{{tag}}</li>
                             </ul>
                         </div>
                     </div>
@@ -43,9 +43,8 @@
                         <input list="post.cats" id="post.cat" ng-model="input_cat" placeholder="Categories"
                                class="form-control" ng-keydown="$event.which == 32 && cat_to_cats(input_cat)" ng-value="input_cat"/>
                         <datalist id="post.cats">
-                            <option ng-value="cat" ng-repeat="cat in available_cats">{{cat}}</option>
+                            <option ng-value="cat.category" ng-repeat="cat in available_cats">{{cat.category}}</option>
                         </datalist>
-                        <input type="hidden" ng-model="post.cat" ng-value="json_api()" />
                         <div>
                             <ul>
                                 <li ng-repeat="cat in post.cats" ng-click="remove_cat(cat)">{{cat}}</li>
