Post administration interface: create & edit

--- a/helptux/templates/admin/admin_base.html
+++ b/helptux/templates/admin/admin_base.html
@@ -40,6 +40,7 @@
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.cat.js') }}"></script>
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/api/api.post.js') }}"></script>
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/tagger/tagger.js') }}"></script>
+    <script type="application/javascript" src="{{ url_for('static', filename='helptux/modules/helptux.generic.js') }}"></script>
     <script type="application/javascript" src="{{ url_for('static', filename='helptux/scripts/admin.js') }}"></script>
     {% block helptux_js %}
     {% endblock %}
