--- a/helptux/templates/admin/post/list.html
+++ b/helptux/templates/admin/post/list.html
@@ -16,7 +16,7 @@
         {% for post in posts %}
             <tr>
                 <td>{{ post.id }}</td>
-                <td>{{ post.type }}</td>
+                <td>{{ post.type.type }}</td>
                 <td>{{ post.title }}</td>
                 <td>{{ post.abstract }}</td>
                 <td>
@@ -33,7 +33,7 @@
                         {% endfor %}
                     </div>
                 </td>
-                <td>{{ post.author }}</td>
+                <td>{{ post.author.username }}</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="post_mod_{{ post.id }}">
                         <a href="{{ url_for('.v_post_edit', post_id=post.id) }}">
