--- a/helptux/templates/public/post.html
+++ b/helptux/templates/public/post.html
@@ -9,6 +9,16 @@
                     {{ post.formatted_content }}
                 </div>
             </div>
+            <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+                <div class="sidebar-module">
+                <h4>Tags</h4>
+                <ul class="list-unstyled">
+                    {% for tag in post.tags %}
+                        <li><a href="{{ url_for('.v_show_tag', tag_id=tag.id) }}">{{ tag }}</a></li>
+                    {% endfor %}
+                </ul>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
