Posts and lists of posts

--- a/helptux/templates/admin/post/list.html
+++ b/helptux/templates/admin/post/list.html
@@ -5,6 +5,7 @@
         <tr>
             <th>ID</th>
             <th>Type</th>
+            <th>Slug</th>
             <th>Title</th>
             <th>Abstract</th>
             <th>Tags</th>
@@ -16,6 +17,7 @@
             <tr>
                 <td>{{ post.id }}</td>
                 <td>{{ post.type.type }}</td>
+                <td>{{ post.slug }}</td>
                 <td>{{ post.title }}</td>
                 <td>{{ post.abstract }}</td>
                 <td>
