--- a/helptux/templates/base.html
+++ b/helptux/templates/base.html
@@ -15,8 +15,13 @@
           rel="stylesheet"/>
     <link href="{{ url_for('static', filename='bower_components/bootstrap/dist/css/bootstrap-theme.css') }}"
           rel="stylesheet"/>
-    <link href="{{ url_for('static', filename='bower_components/bootstrap/dist/css/bootstrap-blog.css') }}"
+    <!-- Extra CSS -->
+    {% if extra_css %}
+        {% for css in extra_css %}
+            <link href="{{ url_for('static', filename=css) }}"
           rel="stylesheet"/>
+        {% endfor %}
+    {% endif %}
     <!-- Helptux -->
     <link href="{{ url_for('static', filename='helptux/helptux.css') }}" rel="stylesheet"/>
     {% block helptux_css %}
